@@ -5,6 +5,7 @@
     /// </summary>
     public static class Settings
     {
+        public static bool plainThumbs = false;
         public static bool debugLogging = false;
     }
 }
