@@ -1,5 +1,7 @@
 ﻿
+- Add mod options panel setting for plain or skybox thumbnail backgrounds
 - Add mod options panel setting for extra debugging logging and reduce default logging detail
+- Adjust render lighting angle to reduce effects of themes with over-saturated light
 - Wait until confirmation level is fully loaded before generating thumbnails
 - Cache thumbnails directly in BuildingData record
 - Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
